--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "express": "^4.21.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0",
+    "pug": "^3.0.3"
   }
 }
