--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "moment": "^2.30.1",
